<resources>
    <string name="app_name">Pendataan Alumni</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_berita">Berita</string>
    <string name="title_profile">Profile</string>
    <string name="email">Email</string>
    <string name="nim">NIM</string>
    <string name="nama">Nama</string>
    <string name="kelas">Kelas</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="your_profile_data">Your Profile Data</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="data_alumni">Data Alumni</string>
    <string name="nama_alumni">Nama Alumni</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal">Tanggal</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="tahun_masuk">Tahun Masuk</string>
    <string name="tahun_lulus">Tahun Lulus</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="jabatan">Jabatan</string>
    <string name="simpan">Simpan</string>
    <string name="about_app">Aplikasi Pendataan Alumni adalah aplikasi karya mahasiswa TIK program studi Teknik Informatika. Nama dia adalah Alvin Tandiardi dari kelas TI 6A. Semoga aplikasi ini dapat membantu Jurusan dalam mendata alumni yang telah lulus.</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string-array name="list_judul">
        <item>Lawan Virus Corona, Toyota Berikan 1.000 APD dan 5 Truk Dyna</item>
        <item>Ada di Indonesia, Cara Periksa Corona dengan Drive Thru</item>
        <item>Petugas Perbatasan Kewalahan Cegah Penyebaran Covid-19</item>
        <item>Tambah 9 Pasien Positif Covid-19, Kalsel Catat 58 Kasus, Tertinggi di Kalimantan</item>
        <item>UPDATE Kasus Covid-19 di Jakarta hingga 17 April: 2.819 Positif, 204 Sembuh, 248 Meninggal</item>
        <item>Di Lamongan, "Pocong" Bagikan Masker ke Warga yang Keluar Malam Hari</item>
        <item>Tutup Paksa Mal, Pemkot Bandung Ancam Cabut Izin Usaha</item>
        <item>Penarikan Iuran BPJS Kesehatan Tak Sesuai Putusan MA, Ombudsman: Rawan Malaadministrasi</item>
        <item>Persib, Arema, hingga Persija, Kenapa Julukan Klub Indonesia Pakai Jenis Hewan?</item>
        <item>Saling Menguatkan, Warga Magetan Cantolkan Makanan di Pagar Rumah Pasien Positif Covid-19</item>
        <item>Keiji Fujiwara, Pengisi Suara Ayah Shin-chan, Meninggal Dunia</item>
        <item>Survei: Hampir Dua Pertiga Warga AS Sebut Trump Lambat Tangani Covid-19</item>
    </string-array>
</resources>