<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.TambahDataActivity">

    <LinearLayout
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tambah_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nim"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tambah_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_alumni"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tambah_tempat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tempat_lahir"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_tambah_tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/tanggal_lahir" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_tambah_tanggal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@drawable/button_curve"
                android:text="@string/tanggal" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tambah_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tambah_agama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Agama"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tambah_nomor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tlp/hp"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tambah_masuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tahun_masuk"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tambah_lulus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tahun_lulus"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tambah_pekerjaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pekerjaan"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_tambah_jabatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jabatan"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_tambah_simpan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_curve"
            android:text="@string/simpan"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>